--- a/enyermi/index.html
+++ b/enyermi/index.html
@@ -6,7 +6,8 @@
     <title>Mermelab - Inicio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="icon" type="image/x-icon" href="img/favicon.ico"> </head>
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+</head>
 <body>
     <header>
         <div class="header-content">
@@ -22,7 +23,8 @@
         <ul>
             <li><a href="index.html" class="active">Inicio</a></li>
             <li><a href="sobre-nosotros.html">Sobre Nosotros</a></li>
-            <li><a href="noticios.html">Noticias</a></li> <li><a href="blog.html">Blog</a></li>       <li><a href="recursos.html">Recursos</a></li>
+            <li><a href="noticios.html">Noticias y Blog</a></li>
+            <li><a href="recursos.html">Recursos</a></li>
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
@@ -31,28 +33,45 @@
     <main>
         <section class="welcome-section">
             <h2>Bienvenidos a Mermelab: El Arte de la Mermelada Casera</h2>
-            <p>Descubre el placer de crear tus propias mermeladas en casa. En Mermelab, te guiamos paso a paso, desde la selección de la fruta perfecta hasta las técnicas de conservación. Explora nuestras recetas, consejos y secretos para que cada frasco sea una obra maestra de sabor.</p>
+            <p>Descubre el placer de crear tus propias mermeladas en casa. En Mermelab, te guiamos paso a paso, desde la selección de la fruta perfecta hasta las técnicas de conservación. Explora nuestras recetas, consejos y secretos para que cada frasco sea una obra maestra de sabor artesanal.</p>
             <p>¿Listo para empezar? <a href="recursos.html" class="cta-button">Explora Nuestros Recursos</a></p>
         </section>
 
+        <section class="why-make-jam">
+            <h2>¿Por qué hacer mermelada casera?</h2>
+            <ul>
+                <li>✔️ Controlas los ingredientes y evitas conservantes artificiales.</li>
+                <li>✔️ Aprovechas frutas de temporada y reduces el desperdicio.</li>
+                <li>✔️ Es una forma creativa y deliciosa de compartir con familia y amigos.</li>
+                <li>✔️ Puedes experimentar con sabores únicos y personalizados.</li>
+            </ul>
+            <img src="img/mermeladas.png" alt="Mermelada casera en frascos sobre una mesa rústica" style="width:100%; max-width:700px; display:block; margin:20px auto; border-radius:12px;">
+        </section>
+
         <section class="featured-news">
-            <h2>Destacado del Blog</h2> <article>
-                <h3>Nueva Guía: Mermelada de Mango Tropical</h3>
-                <p>Hemos lanzado una guía detallada para preparar una exquisita mermelada de mango con un toque tropical. ¡Perfecta para el verano! <a href="blog.html#articulo-mango">Leer más en el blog...</a></p> <p><small>Publicado: 20 de Abril, 2025</small></p>
+            <h2>Destacado del Blog</h2>
+            <article>
+                <h3>Nueva Guía: Mermelada de Fresa Tradicional</h3>
+                <p>Descubre nuestra guía completa para preparar una deliciosa <strong>mermelada de fresa casera</strong>, ideal para untar en panes, acompañar postres o regalar. Aprende a elegir las mejores fresas, equilibrar el dulzor natural con azúcar y aplicar técnicas de cocción que conservan el color y sabor intenso de esta fruta.</p>
+                <p>Incluye consejos para una textura perfecta, ideas para combinaciones (como fresa-vainilla o fresa-menta), y sugerencias de envasado para regalar tus creaciones. ¡Un clásico que no falla en ningún hogar!</p>
+                <p><a href="noticios.html#mermelada-fresa">Leer más en el blog...</a></p>
+                <p><small>Publicado: 20 de Abril, 2025</small></p>
             </article>
-             <p><a href="noticios.html">Ver noticias rápidas...</a> | <a href="blog.html">Ir al blog completo...</a></p> </section>
+            <p><a href="noticios.html">Ver noticias rápidas...</a> | <a href="noticios.html">Ir al blog completo...</a></p>
+        </section>
+        
     </main>
 
     <footer>
         <div class="redes">
             <ul>
-                <li><a href="#" title="Facebook" aria-label="Visítanos en Facebook"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#" title="Instagram" aria-label="Visítanos en Instagram"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#" title="Pinterest" aria-label="Visítanos en Pinterest"><i class="fab fa-pinterest"></i></a></li>
-                 <li><a href="#" title="YouTube" aria-label="Visítanos en YouTube"><i class="fab fa-youtube"></i></a></li>
+                <li><a href="https://www.facebook.com/groups/760396827407835" title="Facebook" aria-label="Visítanos en Facebook"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="https://www.instagram.com/corazondemermelada/" title="Instagram" aria-label="Visítanos en Instagram"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://x.com/CaseraMermelada" title="Twitter" aria-label="Visítanos en Twitter"><i class="fab fa-twitter"></i></a></li>
             </ul>
         </div>
         <p>© 2025 Mermelab. Todos los derechos reservados.</p>
     </footer>
+    
 </body>
 </html>
