--- a/enyermi/recursos.html
+++ b/enyermi/recursos.html
@@ -6,13 +6,15 @@
     <title>Recursos - Mermelab</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
 </head>
 <body>
     <header>
         <div class="header-content">
-             <img src="img/logo.png" alt="Logo de Mermelab - Un frasco de mermelada sonriente"> <div>
-                <h1>Recursos y Biblioteca</h1>
-                <p>Guías, videos y herramientas para el maestro mermeladero.</p>
+            <img src="img/logo.png" alt="Logo de Mermelab - Un frasco de mermelada sonriente">
+            <div>
+                <h1>Mermelab</h1>
+                <p>¡Dónde la ciencia y el sabor se fusionan para crear mermeladas deliciosas!</p>
             </div>
         </div>
     </header>
@@ -30,58 +32,78 @@
 
     <main>
         <section class="resource-category">
-            <h2><i class="fas fa-book-open"></i> Guías y Documentos</h2>
+            <h2><i class="fas fa-book-open"></i> Guías y Recetas</h2>
+            <p>Descarga nuestras guías completas y recetas paso a paso.</p>
             <ul class="resource-list">
                 <li>
                     <i class="fas fa-file-pdf"></i>
-                    <strong>Guía PDF: Mermeladas Caseras 101</strong>
-                    <p>El punto de partida perfecto. Cubre los fundamentos, ingredientes esenciales y el proceso básico paso a paso.</p>
-                    <a href="docs/guia-mermeladas-101.pdf" download class="resource-link download">Descargar PDF</a>
+                    <div class="resource-content">
+                         <strong>Guía Esencial para tu Primera Mermelada (PDF)</strong>
+                         <p>Todo lo que necesitas saber para empezar a hacer mermeladas caseras.</p>
+                         <a href="docs/Guia_Hacer_Mermelada_Mermelab.pdf" download class="resource-link download">Descargar PDF</a>
+                    </div>
                 </li>
                 <li>
-                    <i class="fas fa-chart-pie"></i>
-                    <strong>Infografía: Proporciones Ideales Fruta-Azúcar-Pectina</strong>
-                    <p>Una guía visual rápida para entender cómo equilibrar los ingredientes clave para obtener la textura perfecta.</p>
-                    <a href="img/infografia-proporciones.png" target="_blank" class="resource-link view">Ver Infografía</a> </li>
-                 <li>
-                    <i class="fas fa-file-alt"></i>
-                    <strong>Checklist de Equipo Esencial</strong>
-                    <p>Asegúrate de tener todo lo necesario antes de empezar tu aventura mermeladera.</p>
-                    <a href="docs/checklist-equipo.pdf" download class="resource-link download">Descargar Checklist</a>
+                     <i class="fas fa-utensils"></i>
+                     <div class="resource-content">
+                         <strong>Recetario Clásico de Mermeladas de Frutas</strong>
+                         <p>Las recetas tradicionales de fresa, ciruela, durazno y más.</p>
+                          <a href="docs/Infografía Proyecto de Física moderno violeta negro.pdf.pdf" class="resource-link view">Ver Recetario Online</a>
+                     </div>
                 </li>
-            </ul>
-        </section>
-
-        <section class="resource-category">
-            <h2><i class="fas fa-video"></i> Tutoriales en Video</h2>
-             <ul class="resource-list">
                 <li>
-                    <i class="fab fa-youtube"></i>
-                    <strong>Video: Cómo Esterilizar Frascos Correctamente</strong>
-                    <p>Aprende el método de baño maría para asegurar una conservación segura y duradera de tus mermeladas.</p>
-                    <a href="https://youtu.be/xxxxxxxxxx" target="_blank" class="resource-link external">Ver en YouTube</a> </li>
-                 <li>
-                    <i class="fab fa-youtube"></i>
-                    <strong>Video: La Prueba del Plato Frío para el Punto de Cuajado</strong>
-                     <p>Un truco infalible para saber exactamente cuándo tu mermelada ha alcanzado la consistencia perfecta.</p>
-                    <a href="https://youtu.be/yyyyyyyyyy" target="_blank" class="resource-link external">Ver en YouTube</a> </li>
+                    <i class="fas fa-file-pdf"></i>
+                    <div class="resource-content">
+                        <strong>Diapositiva de la Pagina</strong>
+                        <p>Diapositiva que Explica la Pagina Detalladamente.</p>
+                         <a href="docs/Mermelab-Explorando-la-Mermelada-Casera-vs-Quimica (1) (2).pptx" class="resource-link view">Ver Diapositiva</a>
+                    </div>
+               </li>
             </ul>
         </section>
 
          <section class="resource-category">
-            <h2><i class="fas fa-link"></i> Enlaces Externos Útiles</h2>
-             <ul class="resource-list">
+            <h2><i class="fas fa-video"></i> Tutoriales en Video</h2>
+            <p>Aprende viendo con nuestros tutoriales fáciles de seguir.</p>
+            <ul class="resource-list">
+                <li>
+                    <i class="fab fa-youtube"></i>
+                    <div class="resource-content">
+                        <strong>Video: Cómo Esterilizar Frascos Correctamente</strong>
+                        <p>Paso a paso para asegurar que tus conservas duren más y sean seguras.</p>
+                         <a href="https://youtu.be/aaP9VATFNM0?si=Ml0B5D7e0SDe7hrl" target="_blank" class="resource-link view">Ver Video en YouTube</a>
+                    </div>
+                </li>
+                 <li>
+                    <i class="fab fa-youtube"></i>
+                     <div class="resource-content">
+                        <strong>Video: El Punto de Cuajado Perfecto Explicado</strong>
+                        <p>Técnicas visuales para saber cuándo tu mermelada está lista.</p>
+                         <a href="https://youtu.be/z9gsgwZp_xQ?si=edoL_NCnzgfTfw-2" target="_blank" class="resource-link view">Ver Video en YouTube</a>
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+         <section class="resource-category">
+            <h2><i class="fas fa-link"></i> Enlaces Útiles</h2>
+            <p>Recursos externos recomendados para mermeladeros.</p>
+            <ul class="resource-list">
                 <li>
                     <i class="fas fa-leaf"></i>
-                    <strong>Calendario de Frutas de Temporada</strong>
-                    <p>Descubre cuáles frutas están en su mejor momento según la época del año (enlace genérico, adaptar a región si es posible).</p>
-                    <a href="https://www.consumer.es/alimentacion/calendario-de-frutas-y-verduras-de-temporada.html" target="_blank" class="resource-link external">Visitar Sitio</a>
+                     <div class="resource-content">
+                        <strong>Calendario de Frutas de Temporada</strong>
+                        <p>Descubre cuáles frutas están en su mejor momento según la época del año (enlace genérico, adaptar a región si es posible).</p>
+                    <a href="https://www.cuerpomente.com/alimentacion/calendario-anual-frutas-verduras-temporada_1684" target="_blank" class="resource-link external">Visitar Sitio</a>
+                    </div>
                 </li>
                  <li>
                     <i class="fas fa-shopping-cart"></i>
+                     <div class="resource-content">
                     <strong>Tienda Recomendada de Utensilios</strong>
                     <p>Encuentra frascos, termómetros y otros accesorios útiles para tus conservas (enlace de ejemplo).</p>
-                    <a href="https://www.ejemplotienda.com/conservas" target="_blank" class="resource-link external">Visitar Tienda</a>
+                    <a href="https://www.ikea.com.do/es/products/cocinas/menaje-de-cocina/utensilios-de-cocina" target="_blank" class="resource-link external">Visitar Tienda</a>
+                    </div>
                 </li>
             </ul>
         </section>
@@ -90,10 +112,9 @@
     <footer>
         <div class="redes">
             <ul>
-                <li><a href="#" title="Facebook" aria-label="Visítanos en Facebook"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#" title="Instagram" aria-label="Visítanos en Instagram"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#" title="Pinterest" aria-label="Visítanos en Pinterest"><i class="fab fa-pinterest"></i></a></li>
-                 <li><a href="#" title="YouTube" aria-label="Visítanos en YouTube"><i class="fab fa-youtube"></i></a></li>
+                <li><a href="https://www.facebook.com/groups/760396827407835" title="Facebook" aria-label="Visítanos en Facebook"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="https://www.instagram.com/corazondemermelada/" title="Instagram" aria-label="Visítanos en Instagram"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://x.com/CaseraMermelada" title="Twitter" aria-label="Visítanos en Twitter"><i class="fab fa-twitter"></i></a></li>
             </ul>
         </div>
         <p>© 2025 Mermelab. Todos los derechos reservados.</p>
