--- a/enyermi/faq.html
+++ b/enyermi/faq.html
@@ -6,13 +6,15 @@
     <title>Preguntas Frecuentes - Mermelab</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
 </head>
 <body>
     <header>
         <div class="header-content">
-             <img src="img/logo.png" alt="Logo de Mermelab - Un frasco de mermelada sonriente"> <div>
-                <h1>Preguntas Frecuentes (FAQ)</h1>
-                <p>Respuestas a las dudas más comunes sobre la elaboración de mermeladas.</p>
+            <img src="img/logo.png" alt="Logo de Mermelab - Un frasco de mermelada sonriente">
+            <div>
+                <h1>Mermelab</h1>
+                <p>¡Dónde la ciencia y el sabor se fusionan para crear mermeladas deliciosas!</p>
             </div>
         </div>
     </header>
@@ -72,10 +74,9 @@
     <footer>
         <div class="redes">
             <ul>
-                <li><a href="#" title="Facebook" aria-label="Visítanos en Facebook"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#" title="Instagram" aria-label="Visítanos en Instagram"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#" title="Pinterest" aria-label="Visítanos en Pinterest"><i class="fab fa-pinterest"></i></a></li>
-                 <li><a href="#" title="YouTube" aria-label="Visítanos en YouTube"><i class="fab fa-youtube"></i></a></li>
+                <li><a href="https://www.facebook.com/groups/760396827407835" title="Facebook" aria-label="Visítanos en Facebook"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="https://www.instagram.com/corazondemermelada/" title="Instagram" aria-label="Visítanos en Instagram"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://x.com/CaseraMermelada" title="Twitter" aria-label="Visítanos en Twitter"><i class="fab fa-twitter"></i></a></li>
             </ul>
         </div>
         <p>© 2025 Mermelab. Todos los derechos reservados.</p>
