--- a/enyermi/sobre-nosotros.html
+++ b/enyermi/sobre-nosotros.html
@@ -6,20 +6,22 @@
     <title>Sobre Nosotros - Mermelab</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
 </head>
 <body>
     <header>
         <div class="header-content">
-             <img src="img/logo.png" alt="Logo de Mermelab - Un frasco de mermelada sonriente"> <div>
-                <h1>Sobre Nosotros</h1>
-                <p>Conoce la pasión detrás de Mermelab.</p>
+            <img src="img/logo.png" alt="Logo de Mermelab - Un frasco de mermelada sonriente">
+            <div>
+                <h1>Mermelab</h1>
+                <p>¡Dónde la ciencia y el sabor se fusionan para crear mermeladas deliciosas!</p>
             </div>
         </div>
     </header>
 
     <nav>
         <ul>
-           <li><a href="index.html">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="sobre-nosotros.html" class="active">Sobre Nosotros</a></li>
             <li><a href="noticios.html">Noticias y Blog</a></li>
             <li><a href="recursos.html">Recursos</a></li>
@@ -31,12 +33,12 @@
     <main>
         <section>
             <h2>Nuestra Misión</h2>
-            <p>Promover y facilitar la elaboración casera de mermeladas y conservas, fomentando el uso de ingredientes frescos y técnicas artesanales para crear productos saludables, deliciosos y llenos de cariño.</p>
+            <p>Promover y facilitar la elaboración casera de mermeladas y conservas, fomentando el uso de ingredientes frescos y técnicas artesanales para crear productos saludables, deliciosos y llenos de cariño. Enseñamos a transformar frutas comunes en obras de arte culinarias que puedes disfrutar todo el año.</p>
         </section>
 
         <section>
             <h2>Nuestra Visión</h2>
-            <p>Aspiramos a convertirnos en la comunidad online de referencia para los amantes de las mermeladas caseras, un espacio donde compartir conocimientos, experiencias y la alegría de conservar los sabores de la naturaleza.</p>
+            <p>Aspiramos a convertirnos en la comunidad online de referencia para los amantes de las mermeladas caseras, un espacio donde compartir conocimientos, experiencias y la alegría de conservar los sabores de la naturaleza. Queremos ver a cada hogar disfrutando de su propia creación en un frasco.</p>
         </section>
 
         <section>
@@ -47,43 +49,51 @@
                 <li><strong>Compartir Conocimientos:</strong> Creemos en el poder de enseñar y aprender juntos.</li>
                 <li><strong>Comunidad:</strong> Fomentar un espacio amigable y colaborativo.</li>
                 <li><strong>Pasión por lo Casero:</strong> Celebrar la satisfacción de crear con tus propias manos.</li>
+                <li><strong>Sostenibilidad:</strong> Promovemos el aprovechamiento de frutas locales y de temporada.</li>
             </ul>
         </section>
 
         <section>
             <h2>Nuestra Historia</h2>
-            <p>Mermelab nació en 2022, fruto de la pasión familiar por las conservas caseras transmitida de generación en generación. Lo que comenzó como un pequeño blog para compartir recetas con amigos, ha crecido hasta convertirse en una vibrante comunidad que conecta a miles de aficionados a la mermelada de todo el mundo hispanohablante. Seguimos creciendo, inspirados por cada nueva temporada de frutas y por las historias de éxito de nuestros usuarios.</p>
+            <p>Mermelab nació en 2022, fruto de la pasión familiar por las conservas caseras transmitida de generación en generación. Lo que comenzó como un pequeño blog para compartir recetas con amigos, ha crecido hasta convertirse en una vibrante comunidad que conecta a miles de aficionados a la mermelada de todo el mundo hispanohablante.</p>
+            <p>Hemos ofrecido talleres virtuales, colaboraciones con cocineros artesanales y compartido más de 150 recetas originales. Cada frasco preparado por nuestros seguidores es un motivo más para seguir creciendo.</p>
         </section>
 
-        <section class="team-section"> <h2>Nuestro Equipo</h2>
+        <section class="team-section">
+            <h2>Nuestro Equipo</h2>
             <p>Detrás de Mermelab hay un grupo de entusiastas de la cocina y la conservación:</p>
             <div class="team-members">
-                 <div class="team-member">
-                    <p><strong>Lisandra:</strong> Fundadora y experta en recetas tradicionales.</p>
+                <div class="team-member-card">
+                    <h3>Lisandra</h3>
+                    <p>Fundadora y experta en recetas tradicionales. Inspira con su pasión y conocimientos heredados de su abuela.</p>
                 </div>
-                 <div class="team-member">
-                    <p><strong>Frailyn:</strong> Encargado de contenido digital y redes sociales.</p>
+                <div class="team-member-card">
+                    <h3>Frailyn</h3>
+                    <p>Encargado de contenido digital y redes sociales. Siempre al tanto de las tendencias y en contacto con la comunidad.</p>
                 </div>
-                 <div class="team-member">
-                    <p><strong>Enyermi:</strong> Especialista en técnicas de conservación y seguridad alimentaria.</p>
+                <div class="team-member-card">
+                    <h3>Enyermi</h3>
+                    <p>Especialista en técnicas de conservación y seguridad alimentaria. Garantiza que todo lo que enseñamos sea seguro y duradero.</p>
                 </div>
-                 <div class="team-member">
-                    <p><strong>Moises:</strong> Desarrollador web y soporte técnico.</p>
+                <div class="team-member-card">
+                    <h3>Moises</h3>
+                    <p>Desarrollador web y soporte técnico. Asegura que la experiencia en línea de Mermelab sea fluida e intuitiva.</p>
                 </div>
-                 <div class="team-member">
-                    <p><strong>Jazmin:</strong> Fotógrafa y creadora de contenido visual.</p>
+                <div class="team-member-card">
+                    <h3>Jazmin</h3>
+                    <p>Fotógrafa y creadora de contenido visual. Da vida a las recetas con imágenes deliciosas que abren el apetito.</p>
                 </div>
             </div>
         </section>
+        
     </main>
 
     <footer>
         <div class="redes">
-             <ul>
-                <li><a href="#" title="Facebook" aria-label="Visítanos en Facebook"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#" title="Instagram" aria-label="Visítanos en Instagram"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#" title="Pinterest" aria-label="Visítanos en Pinterest"><i class="fab fa-pinterest"></i></a></li>
-                 <li><a href="#" title="YouTube" aria-label="Visítanos en YouTube"><i class="fab fa-youtube"></i></a></li>
+            <ul>
+                <li><a href="https://www.facebook.com/groups/760396827407835" title="Facebook" aria-label="Visítanos en Facebook"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="https://www.instagram.com/corazondemermelada/" title="Instagram" aria-label="Visítanos en Instagram"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://x.com/CaseraMermelada" title="Twitter" aria-label="Visítanos en Twitter"><i class="fab fa-twitter"></i></a></li>
             </ul>
         </div>
         <p>© 2025 Mermelab. Todos los derechos reservados.</p>
